--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
+    <!-- <img src="https://assets.stickpng.com/images/58f37709a4fa116215a9240d.png" ></img> -->
+
 
     <div id="body"  style="display: flex;flex-direction: column;">
 
@@ -18,11 +21,17 @@
             <span class="slogan">Desencriptando tokens...</span>
             <span class="slogan">Automatizando Tramuyo...</span>
           </div>
+
+
+         
     </div>
 
 
     <script src="./socket.io/socket.io.js"></script> 
     <script src="./index.js"></script>
+
+
+
 
 
 
