--- a/public/index.html
+++ b/public/index.html
@@ -14,15 +14,7 @@
 
     <div id="body"  style="display: flex;flex-direction: column;">
 
-        <div class="lds-grid"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
-       
-        <div class="slogans">
-            <span class="slogan">Desplegando Malware...</span>
-            <span class="slogan">Desencriptando tokens...</span>
-            <span class="slogan">Automatizando Tramuyo...</span>
-          </div>
-
-
+        <div class="load"></div>
          
     </div>
 
