--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,10 @@
     <script src="./socket.io/socket.io.js"></script> 
     <script src="./index.js"></script>
 
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9489986811287023"
+     crossorigin="anonymous"></script>
+
     
 </body>
 </html>
